# conan

./: README.md  install.sh
extensions/commands/: cmd_cmrun.py
templates/cmake_exe/: CMakeLists.txt  conanfile.py
templates/cmake_exe/src/: main.cpp  {{name}}.cpp
templates/cmake_lib/: .editorconfig  CMakeLists.txt  conanfile.py
templates/cmake_lib/include/{{name}}/: {{name}}.h
templates/cmake_lib/src/: {{name}}.cpp
templates/command/new/vee_cmake_exe/: CMakeLists.txt  LICENSE  README.md
templates/command/new/vee_cmake_exe/src/: {{name}}.cpp
templates/command/new/vee_cmake_lib/: README.md
templates/command/new/vee_cmake_lib/src/: {{name}}.cpp
